Cors abierto, fix timeout, + cambios de planes
